--- a/CV-AYMERIC/index.html
+++ b/CV-AYMERIC/index.html
@@ -41,6 +41,7 @@
         <li><a href="#portfolio">Projet</a></li>
         <li><a href="#services">Loisirs</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a>  <div class="container"> <button onclick="myFunction()">color mode</button></div></a></li>
 
       </ul>
     </nav><!-- .nav-menu -->
@@ -51,7 +52,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Aymeric Herchuelz</h1>
-      <h2>Developper web junior</h2>
+      <h2 class="light">Developper web junior</h2>
       <a href="assets/img/profil.pdf" download="cv_herchuelz_aymeric_pdf"target="blank">Télécharger le CV pdf</a>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
@@ -65,7 +66,7 @@
 
         <div class="section-title">
           <span>A PROPOS</span>
-          <h2>A PROPOS</h2>
+          <h2 class="light">A PROPOS</h2>
           <p></p>
         </div>
 
@@ -145,7 +146,7 @@ Depuis quelques temps, je suis fortement interesse par l'informatique. D'abord a
 
         <div class="section-title">
           <span>PARCOURS</span>
-          <h2>PARCOURS</h2>
+          <h2 class="light">PARCOURS</h2>
           <p></p>
         </div>
 
@@ -243,7 +244,7 @@ Depuis quelques temps, je suis fortement interesse par l'informatique. D'abord a
 
         <div class="section-title">
           <span>Projet</span>
-          <h2>Projet</h2>
+          <h2 class="light">Projet</h2>
           <p></p>
         </div>
 
@@ -257,58 +258,29 @@ Depuis quelques temps, je suis fortement interesse par l'informatique. D'abord a
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-2.PNG" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Jeu de l'escargot</h4>
-              <p>projet js drag and drop</p>
-              <a target="_blank" href="https://github.com/aymeric19/jeu-de-l-escargot" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-2.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>Generateur citation</h4>
-              <p>random</p>
+              <h4>citation aleatoire</h4>
+              <p>generateur aleatoire js </p>
               <a target="_blank" href="https://github.com/aymeric19/random" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-3.PNG" class="img-fluid" alt=""></div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-9.PNG" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Escale</h4>
-              <p>diapo js</p>
-              <a target="_blank" href="https://github.com/MaxouDEV/Escales" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>cv</h4>
+              <p>cv ase html et css </p>
+              <a target="_blank" href="https://github.com/aymeric19/cv" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
-
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-5.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-1.PNG" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Piccollino</h4>
-              <p>projet boostrap</p>
-              <a target="_blank" href="https://github.com/aymeric19/PICCOLINO" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-6.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>Panier legume</h4>
-              <p>fonction de selection js</p>
-              <a target="_blank" href="https://github.com/aymeric19/legume" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-7.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>projet perso</h4>
-              <p>dossier simplon avec connection php</p>
-              <a target="_blank" href="https://github.com/aymeric19/formationIT" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>jeu d l'escargot</h4>
+              <p>drop and drag </p>
+              <a target="_blank" href="https://github.com/aymeric19/jeu-de-l-escargot" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -321,12 +293,58 @@ Depuis quelques temps, je suis fortement interesse par l'informatique. D'abord a
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-9.png" class="img-fluid" alt=""></div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-5.PNG" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>CV 1</h4>
-              <p>html/css responsif</p>
-              <a target="_blank" href="https://github.com/aymeric19/cv" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>site bootstrap</h4>
+              <p>apprantisage bootstrape </p>
+              <a target="_blank" href="https://github.com/aymeric19/PICCOLINO" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-3.PNG" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>site vitre agence de voyage </h4>
+              <p>projet de groupe </p>
+              <a target="_blank" href="https://github.com/MaxouDEV/Escales" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-6.PNG" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>site legume</h4>
+              <p>fonction de tris </p>
+              <a target="_blank" href="https://github.com/aymeric19/legume" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-7.PNG" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>premier site </h4>
+              <p>motivation simplon </p>
+              <a target="_blank" href="https://github.com/aymeric19/formationIT" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-img"><img src="assets/img/portfolio/Capture d’écran du 2021-02-25 14-57-53.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>site karate</h4>
+              <p>projet pedagogique</p>
+              <a target="_blank" href="https://github.com/aymeric19/ProjetKarate" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-img"><img src="assets/img/portfolio/Capture d’écran du 2021-02-25 15-00-59.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>site mairie </h4>
+              <p>projet API</p>
+              <a target="_blank" href="https://github.com/aymeric19/mapprojet" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -401,13 +419,36 @@ Depuis quelques temps, je suis fortement interesse par l'informatique. D'abord a
 
         </div>
       </section><!-- End Testimonials Section -->
+
+      <section id="services" class="services">
+        <div class="container">
+
+          <div class="section-title">
+            <span>Projet personnel</span>
+            <h2 class="light">Projet personnel</h2>
+            <p></p>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-6">
+              <center></center>
+            </div>
+            <div class="col-lg-6">
+              <center></center>
+            </div>
+          </div>
+
+        </div>
+      </section>
+      <!-- End My Services Section -->
+
       <!-- ======= My Services Section ======= -->
       <section id="services" class="services">
         <div class="container">
 
           <div class="section-title">
             <span>Loisirs</span>
-            <h2>Loisirs</h2>
+            <h2 class="light">Loisirs</h2>
             <p></p>
           </div>
 
@@ -449,6 +490,8 @@ Depuis quelques temps, je suis fortement interesse par l'informatique. D'abord a
         </div>
       </section><!-- End My Services Section -->
 
+
+
   <footer id="footer">
 
 
@@ -459,7 +502,7 @@ Depuis quelques temps, je suis fortement interesse par l'informatique. D'abord a
 
         <div class="section-title">
           <span>CONTACT</span>
-          <h2>CONTACT</h2>
+          <h2 class="light">CONTACT</h2>
           <p></p>
         </div>
 
@@ -483,14 +526,14 @@ Depuis quelques temps, je suis fortement interesse par l'informatique. D'abord a
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email </h3>
-                  <p>aymericherchuelz19@gmail.com</p>
+                  <p class="cordo">aymericherchuelz19@gmail.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Téléphone</h3>
-                  <p>0769787902</p>
+                  <p class="cordo">0769787902</p>
                 </div>
               </div>
             </div>
